# notable

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  lefthook.yml
.claude/: launch.json
.github/workflows/: docker.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_index.sql  0003_icon_assignments.sql
backend/src/: auth.rs  icon_assignments.rs  indexer.rs  main.rs  notes.rs  plugins.rs  settings.rs  sync.rs  themes.rs  vault.rs
core-plugins/: .oxlintrc.json  build.mjs  package-lock.json  package.json  tsconfig.json
core-plugins/advanced-tables/: main.js  manifest.json
core-plugins/advanced-tables/src/: main.ts
core-plugins/backlinks/: main.js  manifest.json
core-plugins/backlinks/src/: main.ts
core-plugins/live-preview/: main.js  manifest.json
core-plugins/live-preview/src/: main.ts
core-plugins/outline/: main.js  manifest.json
core-plugins/outline/src/: main.ts
core-plugins/paste-url/: main.js  manifest.json
core-plugins/paste-url/src/: main.ts
core-plugins/quick-note/: manifest.json
core-plugins/quick-note/src/: main.ts
core-plugins/recent-files/: main.js  manifest.json
core-plugins/recent-files/src/: main.ts
core-plugins/tags/: main.js  manifest.json
core-plugins/tags/src/: main.ts
core-plugins/wikilinks/: main.js  manifest.json
core-plugins/wikilinks/src/: main.ts
core-plugins/word-count/: main.js  manifest.json
core-plugins/word-count/src/: main.ts
docs/: editor-migration-plan.md  plugin-api-v3.md  plugin-api-v4.md  plugin-api-v5.md  plugin-api-v6.md  plugins.md  themes.md
frontend/: .oxlintrc.json  index.html  package-lock.json  package.json  playwright.config.ts  playwright.config.ts.bak  pwa-assets.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/e2e/: mobile.debug.spec.ts  mobile.spec.ts  smoke-debug.spec.ts  smoke.spec.ts  tablet.spec.ts
frontend/src/: App.tsx  InstallPrompt.tsx  main.tsx  styles.css
frontend/src/app/: AppShell.tsx  AuthGate.tsx  CommandPalette.tsx  EditorPane.tsx  ImportVaultDialog.tsx  NewNote.tsx  QuickNote.tsx  SettingsDialog.tsx  ShareTarget.tsx  Sidebar.tsx  StatusBar.tsx  TagView.tsx  ThemeProvider.test.ts  ThemeProvider.tsx  TrashView.tsx  UpdatePrompt.tsx  builtin-commands.ts  useMobileSidebarGesture.ts
frontend/src/components/: AppIcon.tsx  IconPicker.tsx  MountHost.tsx
frontend/src/core/: api.test.ts  api.ts  appearance.test.ts  appearance.ts  commands.test.ts  commands.ts  documents.test.ts  documents.ts  editor.ts  events.test.ts  events.ts  feedback.test.ts  feedback.ts  frontmatter.test.ts  frontmatter.ts  hotkeys.ts  (+18 more)
plugins/word-count/: main.js  manifest.json
themes/: nord.css
(+49 files in other folders)
