[package]
name = "notable-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
yrs = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-embed = "8"
mime_guess = "2"
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
open = "5"

[profile.release]
lto = true
strip = true
