[package]
name = "notable-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
yrs = { version = "0.21", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-embed = "8"
mime_guess = "2"
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
open = "5"
walkdir = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
similar = "2"
notify = "8"
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
semver = "1"
zip = "2"

[profile.release]
lto = true
strip = true

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
